--- a/css/theme-elements.css
+++ b/css/theme-elements.css
@@ -201,7 +201,7 @@ Theme Version:	9.7.0
 
 .accordion.accordion-modern-status.accordion-modern-status-arrow > .card .card-header a:after {
 	transform: translate3d(0, -50%, 0) rotate(180deg);
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	content: "\f107";
 	font-weight: 900;
 }
@@ -2051,7 +2051,7 @@ Theme Version:	9.7.0
 .breadcrumb > li + li:before {
 	color: inherit;
 	opacity: 0.5;
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: 900;
 	content: "\f105";
 	padding: 0 7px 0 5px;
@@ -3645,7 +3645,7 @@ html.sticky-header-active .hamburguer-btn.hamburguer-btn-sticky-dark .close span
 }
 
 .owl-carousel .owl-nav button.owl-prev:before {
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: 900;
 	font-size: 8px;
 	font-size: 0.5rem;
@@ -3660,7 +3660,7 @@ html.sticky-header-active .hamburguer-btn.hamburguer-btn-sticky-dark .close span
 }
 
 .owl-carousel .owl-nav button.owl-next:before {
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: 900;
 	font-size: 8px;
 	font-size: 0.5rem;
@@ -4205,7 +4205,7 @@ html.sticky-header-active .hamburguer-btn.hamburguer-btn-sticky-dark .close span
 }
 
 .owl-carousel.nav-arrows-thin .owl-nav .owl-prev:before, .owl-carousel.nav-arrows-thin .owl-nav .owl-next:before {
-	font-family: Dubai;
+	font-family: simple-line-icons;
 	speak: none;
 	font-style: normal;
 	font-weight: 700;
@@ -5391,7 +5391,7 @@ hr.pattern.pattern-2:after, .divider.pattern.pattern-2:after {
 	right: 17.6px;
 	right: 1.1rem;
 	top: 50%;
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: bold;
 	transform: translate3d(0, -50%, 0);
 	border: 0;
@@ -7608,7 +7608,7 @@ select.form-control-sm, select.form-control-lg {
 .custom-checkbox-1 input[type="checkbox"]:checked + label:after {
 	position: absolute;
 	display: inline-block;
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	content: '\F00C';
 	top: 50%;
 	left: 4px;
@@ -8789,7 +8789,7 @@ i.pi {
 
 i.pi.pi-porto-brand:before {
 	content: '\f111';
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: bold;
 	font-size: 0.51em;
 	color: #FFF;
@@ -9044,7 +9044,7 @@ i.pi.pi-close:after {
 
 .img-thumbnail.img-thumbnail-hover-icon:after {
 	transition: all 0.2s;
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: 900;
 	color: #FFF;
 	content: "\f067";
@@ -9284,7 +9284,7 @@ button.mfp-arrow:before {
 
 button.mfp-arrow:after {
 	content: "\f053";
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: 900;
 	border: none !important;
 }
@@ -9326,7 +9326,7 @@ button.mfp-arrow.mfp-arrow-right:after {
 /* Close */
 .mfp-close,
 .mfp-close-btn-in .mfp-close {
-	font-family: Dubai;
+	font-family: "Poppins", Arial, sans-serif;
 	font-weight: 600;
 	font-size: 22px;
 	color: #838383;
@@ -12078,7 +12078,7 @@ html body .rounded-circle {
 }
 
 .highlighted-word {
-	font-family: Dubai;
+	font-family: "Shadows Into Light", cursive;
 	font-weight: 500;
 }
 
@@ -12626,7 +12626,7 @@ Credits: Codyhouse (https://codyhouse.co/gem/360-degrees-product-viewer)
 .style-switcher-open-loader .style-switcher-tooltip > strong {
 	font-size: 13.6px;
 	font-size: 0.85rem;
-	font-family: Dubai;
+	font-family: "Open Sans";
 	line-height: 1.3;
 	display: block;
 	margin-bottom: 8px;
@@ -12983,7 +12983,7 @@ ul.nav-list li a {
 }
 
 ul.nav-list li a:before {
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	content: "\f054";
 	font-weight: 900;
 	position: absolute;
@@ -14950,7 +14950,7 @@ html.side-panel.side-panel-open.side-panel-push.side-panel-right .body {
 	color: #BAB9BE;
 	font-size: 46px;
 	line-height: 46px;
-	font-family: Dubai;
+	font-family: "Shadows Into Light", cursive;
 	text-transform: uppercase;
 }
 
@@ -15167,7 +15167,7 @@ html.side-panel.side-panel-open.side-panel-push.side-panel-right .body {
 }
 
 .tparrows.tparrows-carousel.tp-leftarrow:before {
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: 900;
 	content: "\f053";
 	position: relative;
@@ -15182,7 +15182,7 @@ html.side-panel.side-panel-open.side-panel-push.side-panel-right .body {
 }
 
 .tparrows.tparrows-carousel.tp-rightarrow:before {
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: 900;
 	content: "\f054";
 	position: relative;
@@ -16387,7 +16387,7 @@ html.gecko .sort-destination.sort-destination-margin > [class*="col-"] {
 }
 
 .tabs-navigation .nav-tabs > li .nav-link:before {
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: 900;
 	font-size: 10px;
 	content: "\f054";
@@ -16586,7 +16586,7 @@ html.gecko .sort-destination.sort-destination-margin > [class*="col-"] {
 	border-radius: 5px;
 	border: 0;
 	color: #666;
-	font-family: Dubai;
+	font-family: 'Playfair Display', serif;
 	margin: 0;
 	padding: 40px 64px 40px 72px;
 	padding: 2.5rem 4rem 2.5rem 4.5rem;
@@ -16606,7 +16606,7 @@ html.gecko .sort-destination.sort-destination-margin > [class*="col-"] {
 
 .testimonial blockquote p {
 	color: #FFF;
-	font-family: Dubai;
+	font-family: 'Playfair Display', serif;
 	font-size: 1.2em;
 }
 
@@ -16719,7 +16719,7 @@ html.gecko .sort-destination.sort-destination-margin > [class*="col-"] {
 
 .testimonial.testimonial-style-3 blockquote p {
 	color: #777;
-	font-family: Dubai;
+	font-family: "Poppins", Arial, sans-serif;
 	font-size: 1em;
 	font-style: normal;
 }
@@ -16782,7 +16782,7 @@ html.gecko .sort-destination.sort-destination-margin > [class*="col-"] {
 
 .testimonial.testimonial-style-4 blockquote p {
 	color: #777;
-	font-family: Dubai;
+	font-family: "Poppins", Arial, sans-serif;
 	font-size: 1em;
 	font-style: normal;
 }
@@ -16826,7 +16826,7 @@ html.gecko .sort-destination.sort-destination-margin > [class*="col-"] {
 
 .testimonial.testimonial-style-5 blockquote p {
 	color: #777;
-	font-family: Dubai;
+	font-family: "Poppins", Arial, sans-serif;
 	font-size: 1.2em;
 	font-style: normal;
 }
@@ -17015,7 +17015,7 @@ html.gecko .sort-destination.sort-destination-margin > [class*="col-"] {
 
 /* Alternarive Font */
 .testimonial.testimonial-alternarive-font blockquote p {
-	font-family: Dubai;
+	font-family: 'Playfair Display', serif;
 	font-style: italic;
 	font-size: 1.2em;
 }
@@ -17719,7 +17719,7 @@ html.gecko .sort-destination.sort-destination-margin > [class*="col-"] {
 .thumb-info-ribbon span {
 	color: #FFF;
 	font-size: 1.1em;
-	font-family: Dubai;
+	font-family: "Shadows Into Light", cursive;
 }
 
 /* Thumb Info - Full Width */
@@ -18277,7 +18277,7 @@ section.timeline .timeline-box .owl-carousel {
 	right: auto;
 	margin-top: 0;
 	top: 12px;
-	font-family: Dubai;
+	font-family: 'Font Awesome 6 Free';
 	font-weight: 900;
 	content: "\f067";
 	z-index: 2;
@@ -18403,7 +18403,7 @@ p.drop-caps:first-letter {
 	padding: 4px;
 	margin-right: 5px;
 	margin-top: 5px;
-	font-family: Dubai;
+	font-family: Georgia;
 }
 
 p.drop-caps.drop-caps-style-2:first-letter {
@@ -18416,38 +18416,38 @@ p.drop-caps.drop-caps-style-2:first-letter {
 
 /* Default Font Style */
 .default-font {
-	font-family: Dubai;
+	font-family: "Poppins", Arial, sans-serif !important;
 }
 
 /* Alternative Font Style */
 .alternative-font {
 	color: #CCC;
-	font-family: Dubai;
+	font-family: "Shadows Into Light", cursive !important;
 	font-size: 1.6em;
 }
 
 .alternative-font-2 {
-	font-family: Dubai;
+	font-family: "Oswald", sans-serif !important;
 }
 
 .alternative-font-3 {
-	font-family: Dubai;
+	font-family: 'Segoe Script', 'Zapfino', 'Savoye LET' !important;
 }
 
 .alternative-font-4 {
-	font-family: Dubai;
+	font-family: 'Poppins', Arial, sans-serif !important;
 }
 
 .alternative-font-5 {
-	font-family: Dubai;
+	font-family: 'Open Sans', Arial, sans-serif !important;
 }
 
 .alternative-font-6 {
-	font-family: Dubai;
+	font-family: 'Montserrat', Arial, sans-serif !important;
 }
 
 .alternative-font-7 {
-	font-family: Dubai;
+	font-family: 'Jost', sans-serif !important;
 }
 
 /* Gradient Text */
@@ -19687,7 +19687,7 @@ section.section-custom-map section.section {
 
 .home-concept strong {
 	display: block;
-	font-family: Dubai;
+	font-family: "Shadows Into Light", cursive;
 	font-size: 1.8em;
 	font-weight: normal !important;
 	position: relative;
