--- a/css/skins/skin-landing.css
+++ b/css/skins/skin-landing.css
@@ -540,7 +540,7 @@ html .bg-color-hover-before-quaternary:before:hover {
 
 html .bg-color-dark,
 html .bg-dark {
-	background-color: #212529 !important;
+	background-color: #ce8d99f7 !important;
 }
 
 html .bg-color-hover-dark:hover,
