--- a/css/theme.css
+++ b/css/theme.css
@@ -19,7 +19,7 @@ html {
 body {
 	background-color: #FFF;
 	color: #777;
-	font-family: "Poppins", Arial, sans-serif;
+	font-family: Dubai;
 	font-size: 14px;
 	line-height: 85px;
 	margin: 0;
