--- a/css/demos/demo-landing.css
+++ b/css/demos/demo-landing.css
@@ -73,7 +73,7 @@ p {
 }
 
 .owl-carousel.carousel-center-active-item-2 .owl-item.active > div {
-		background-image: linear-gradient(150deg, #0088cc 0%, #0088cc 30%, #0169fe 70%, #0169fe 100%) !important;
+		background-image: linear-gradient(150deg, #ff5e7c 0%, #CE8D99 30%, #CE8D99 70%, #ff5e7c 100%) !important;
 }
 
 /* Landing Page Text Reasons */
