--- a/css/skins/skin-landing.css
+++ b/css/skins/skin-landing.css
@@ -33,7 +33,7 @@ a:active {
 
 html .text-color-primary,
 html .text-primary {
-	color: #0088cc !important;
+	color: #CE8D99 !important;
 }
 
 html .text-color-hover-primary:hover,
@@ -1044,8 +1044,8 @@ html .nav-pills-light > li.active > a:focus {
 }
 
 .sort-source.sort-source-style-3 > li.active > a {
-	border-bottom-color: #0088cc !important;
-	color: #0088cc !important;
+	border-bottom-color: #CE8D99 !important;
+	color: #CE8D99 !important;
 }
 
 html .badge-primary {
@@ -6308,7 +6308,7 @@ html .featured-boxes-style-8 .featured-box.featured-box-light .icon-featured {
 
 .featured-boxes-modern-style-primary .featured-box {
 	background: #0088cc;
-	background: linear-gradient(135deg, #0088cc 0%, #383f48 100%);
+	background: linear-gradient(135deg, #CE8D99 0%, #383f48 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#383f48', GradientType=1);
 }
 
